--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,7 @@ Authors@R: c(
 Maintainer: Shirin Nezampour <shirin.nezampour@marquette.edu>
 URL: https://github.com/mmadoliat/NMSDE.git
 Description: Methods and tools for implementing nonparametric multivariate spectral density estimation
-    as described in Nezampour S., Maadooliat M. (2020). Nonparametric Multivariate Spectral Density Estimation. Manuscript under prepration. 
+    as described in Nezampour S., Maadooliat M. (Submitted). Nonparametric Multivariate Spectral Density Estimation. Manuscript under prepration. 
 License: GPL (>= 2)
 Encoding: UTF-8
 LazyData: TRUE
