removing notes and errors deleting Namespace

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,6 +17,7 @@ Imports: Rcpp,
          dse,
          vars,
          factoextra,
+         fda,
 LinkingTo: Rcpp,
            RcppArmadillo,
 Suggests: knitr,
