--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,7 @@ export(inChol2spec)
 export(initial)
 export(iterate)
 export(loglike)
-export(plot.sds)
+export(plot_sds)
 export(psd)
 export(spec2inChol)
 export(tA2G)
