Updated version of NMSDE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,8 @@ export(inChol2spec)
 export(initial)
 export(iterate)
 export(loglike)
+export(loglike_c_cube)
+export(loglike_c_mat)
 export(plot_sds)
 export(psd)
 export(spec2inChol)
