--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: NMSDE
 Type: Package
 Title: Nonparametric Multivariate Spectral Density Estimation
-Version: 0.0.1
+Version: 0.0.0.9000
 Authors@R: c(
     person("Shirin", "Nezampour", email = "shirin.nezampour@marquette.edu", role = c("aut", "cre")),
     person("Mehdi", "Maadooliat", email = "mehdi.maadooliat@marquette.edu", role = "aut"))
@@ -14,6 +14,7 @@ Encoding: UTF-8
 LazyData: TRUE
 RoxygenNote: 7.1.2
 Imports: Rcpp,
+         RcppArmadillo,
          dse,
          vars,
          factoextra,
