--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,5 +21,8 @@ Imports: Rcpp,
          fda,
 LinkingTo: Rcpp,
            RcppArmadillo,
-Suggests: knitr,
+Suggests: 
+    knitr,
+    rmarkdown
 Depends: R (>= 2.10)
+VignetteBuilder: knitr
